---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/ipython_help_escape_command_error_recovery_2.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..51,
        body: [
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 37..51,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 42..45,
                            node_index: NodeIndex(None),
                            context_expr: Tuple(
                                ExprTuple {
                                    node_index: NodeIndex(None),
                                    range: 42..45,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 43..44,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 45..45,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                    is_anon_named_tuple: false,
                                    is_anon_named_tuple_value: false,
                                    callable_shape: None,
                                    is_parameter_shape: false,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 47..48,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 47..48,
                                    id: Name("b"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: {"mode": "ipython"}
2 | with (a, ?b
  |          ^ Syntax Error: Expected an expression
3 | ?
  |


  |
1 | # parse_options: {"mode": "ipython"}
2 | with (a, ?b
3 | ?
  | ^ Syntax Error: Expected `,`, found `?`
  |


  |
2 | with (a, ?b
3 | ?
  |  ^ Syntax Error: unexpected EOF while parsing
  |
